@@ -1,12 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.18 2005/01/04 23:27:53 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.19 2005/01/04 23:29:07 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
   04 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
   GLIStorageDevice now tracks partition boundaries in sectors instead of cylinders.
-  Also now ignores <=100 sectors for free space.
+  Also now ignores <=100 sectors for free space. Removed remaining depends stuff
+  from GLIInstallProfile.
 
   20 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
   GLIStorageDevice returns "unknown" instead of "" for get_type()
